deploy/manifests/kustomized-overlay.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    seriousben.com/repo: https://github.com/seriousben/seriousben.com
  labels:
    app.kubernetes.io/name: seriousben.com
    app.kubernetes.io/part-of: seriousben.com
    env: prod
  name: seriousben-com
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    seriousben.com/repo: https://github.com/seriousben/seriousben.com
  labels:
    app.kubernetes.io/name: seriousben.com
    app.kubernetes.io/part-of: seriousben.com
    env: prod
  name: blog
  namespace: seriousben-com
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: blog
    app.kubernetes.io/name: seriousben.com
    app.kubernetes.io/part-of: seriousben.com
    env: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    seriousben.com/repo: https://github.com/seriousben/seriousben.com
  labels:
    app: blog
    app.kubernetes.io/name: seriousben.com
    app.kubernetes.io/part-of: seriousben.com
    env: prod
  name: blog
  namespace: seriousben-com
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: blog
      app.kubernetes.io/name: seriousben.com
      app.kubernetes.io/part-of: seriousben.com
      env: prod
  template:
    metadata:
      annotations:
        seriousben.com/repo: https://github.com/seriousben/seriousben.com
      labels:
        app: blog
        app.kubernetes.io/name: seriousben.com
        app.kubernetes.io/part-of: seriousben.com
        env: prod
    spec:
      containers:
      - image: seriousben/seriousben-com:84487899358f0442ed6f82ad2c58ff0aa56b54b6
        name: blog
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    seriousben.com/repo: https://github.com/seriousben/seriousben.com
  labels:
    app.kubernetes.io/name: seriousben.com
    app.kubernetes.io/part-of: seriousben.com
    env: prod
  name: blog
  namespace: seriousben-com
spec:
  rules:
  - host: seriousben.com
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
  tls:
  - hosts:
    - seriousben.com
    secretName: seriousben-com-tls
